[tool.poetry]
name = "курсач-апи-attempt2"
version = "0.1.0"
description = ""
authors = ["Tuyana Chirninova <hikkonki@gmail.com>"]
readme = "README.md"
packages = [{include = "курсач_апи_attempt2"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
